--- a/homework/4/index.html
+++ b/homework/4/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta class="div" charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Future Tech Platform</title>
   </head>
   <body>
@@ -145,14 +142,18 @@
       <section class="section">
         <h2 class="subtitle">Հետադարձ կապ</h2>
         <form class="form-group">
-          <p class="text">Անուն</p>
-          <input type="text" class="input" />
-
-          <p class="text">Email</p>
-          <input type="email" class="input" />
-
-          <p class="text">Հաղորդագրություն</p>
-          <textarea class="input"></textarea>
+          <div class="form-group">
+            <label for="'a">Անուն</label>
+            <input type="text" class="input" id="a" />
+          </div>
+          <div class="form-group">
+            <label for="b">Email</label>
+            <input type="email" class="input" id="b" />
+          </div>
+          <div>
+            <label for="c">Հաղորդագրություն</label>
+            <textarea class="input" id="c"></textarea>
+          </div>
           <button type="submit" class="button">Ուղարկել</button>
         </form>
       </section>
