--- a/cssbattle/214/index.html
+++ b/cssbattle/214/index.html
@@ -7,42 +7,40 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="layout">
-      <div class="top-boxes">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="container">
+      <div class="r1">
+        <div class="rect"></div>
+        <div class="rect"></div>
+        <div class="rect"></div>
+        <div class="rect"></div>
+        <div class="rect"></div>
+        <div class="rect"></div>
       </div>
-
-      <div class="line"></div>
-      <div class="line"></div>
-
-      <div class="middle">
-        <div class="side left">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+      <div class="r2">
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="r3">
+        <div class="cascade">
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
         </div>
-
-        <div class="center-box"></div>
-
-        <div class="side right">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="square"></div>
+        <div class="cascade">
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
+          <div class="shortLine"></div>
         </div>
       </div>
     </div>
