--- a/cssbattle/7/index.html
+++ b/cssbattle/7/index.html
@@ -8,14 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="upper">
-        <div class="top-left"></div>
-        <div class="top-right"></div>
-      </div>
-      <div class="lower">
-        <div class="bottom-left"></div>
-        <div class="bottom-right"></div>
-      </div>
+      <div class="lime lime1"></div>
+      <div class="lime lime2"></div>
+      <div class="lime lime3"></div>
     </div>
   </body>
 </html>
